mejoras en el estilo

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista de tareas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="contenedor">
         <div class="main">
         <header class="header">
-            <h1 class="h1">Recordatorios</h1>
             <div class="input-all">
             <input type=text maxlength="100" class="input-text" placeholder="Escribe un recordatorio...">
             <button class="button-input">Enviar</button>    
